<resources>
    <string name="app_name">WS</string>
    <string name="bottom_nav_button1">首页</string>
    <string name="bottom_nav_button2">频道</string>
    <string name="bottom_nav_button3">Take picture</string>
    <string name="bottom_nav_button4">消息</string>
    <string name="bottom_nav_button5">我的</string>
    <string name="toolbar_button1">关注</string>
    <string name="toolbar_button2">搜索</string>
    <string name="title_activity_channel">ChannelActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">首页</string>
</resources>
